--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,15 @@
     font-weight: bold;
 }
 
-.links a {
-    margin: 0 15px;
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    gap: 10px;
-   
-}
 
+.links {
+    display: flex;
+    flex-direction: none; /* ponerlos uno debajo del otro */
+    gap: 10px; /* separar cada botón */
+    align-items: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
 .link-card{
     display: inline-block;
     margin: 15px;
@@ -44,7 +44,6 @@
     background: white;
     border-radius: 8px;
     text-decoration: none;
-    gap: 10px;
     align-items: center;
     margin-top: 15px;
     margin-bottom: 15px;
