--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,13 @@
 
 
 .links {
-    display: flex;
-    flex-direction: none; /* ponerlos uno debajo del otro */
     gap: 10px; /* separar cada botón */
-    align-items: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    gap: 10px;
+   
 }
 .link-card{
     display: inline-block;
